# CN2-Simulator

./: .gitignore  README.md  Voltron_template.mat  Voltron_template_interp.mat  conda_req.txt  environment.yml  example.ipynb  example.py  hh_model.mat  hh_model.tif  hh_model_crop.tif  hh_model_normalized.mat  params.yaml  setup.cfg  setup.py  test.mat
CN2Simul.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CN2Simulator/: calcium_imaging.py  microscopy.py  motif_gen.py  visualize.m  voltage_imaging.py
CN2Simulator/utils/: draw_util.py  util.py
SimulMotif/: calcium_imaging.py  motif_gen.py  utils.py
SimulMotif/utils/: draw_util.py
generated_data/: calcium_signal.mat  gt_type_1.mat  gt_type_2.mat  gt_type_3.mat  gt_type_4.mat  gt_type_5.mat  spike_time.mat
tutorials/: example.ipynb  example.py  for_SUPPORTEXT.py  for_SUPPORTEXT_voltage.py  for_calcium_conc.py  imaging.py
