[metadata]
name = CN2Simulator
version = 0.0.1
author = Minho Eom
author_email = djaalsgh214@gmail.com
description = For simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NICALab/CN2-Simulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True